# hello_shared_library

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hello_shared_library
src/: hello.cpp  hello.h  main.cpp
